A lot of fixes related to alone mode.
(Logical change 1.3016)

--- a/librepair/Makefile.am
+++ b/librepair/Makefile.am
@@ -10,12 +10,12 @@ librepair_la_LDFLAGS	     = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)
 librepair_la_LIBADD	     = $(top_builddir)/libreiser4/libreiser4.la
 
 librepair_la_SOURCES	     = $(librepair_sources)
-librepair_la_CFLAGS	     = @GENERIC_FLAGS@
+librepair_la_CFLAGS	     = @GENERIC_CFLAGS@
 
 librepair_static_la_LIBADD   = $(top_builddir)/libreiser4/libreiser4-static.la
 
 librepair_static_la_SOURCES  = $(librepair_sources)
-librepair_sttaic_la_CFLAGS   = @GENERIC_FLAGS@
+librepair_static_la_CFLAGS   = @GENERIC_CFLAGS@
 
 INCLUDES = -I$(top_srcdir)/include
 
