A lot of fixes and cleanups related to alone mode. It is possible by now build minimal reiser4 support in GRUB. Result binary changed its size from the 108k down to56k.
(Logical change 1.3022)

--- a/libreiser4/Makefile.am
+++ b/libreiser4/Makefile.am
@@ -41,7 +41,7 @@ libreiser4_static_la_CFLAGS  = @GENERIC_CFLAGS@
 if ENABLE_ALONE
 
 libreiser4_alone_la_LIBADD   = $(top_builddir)/libaal/libaal-alone.la \
-			       $(top_builddir)/libaux/libaux-static.la \
+			       $(top_builddir)/libaux/libaux-alone.la \
 			       $(top_builddir)/plugin/libreiser4-plugin-alone.la
 
 libreiser4_alone_la_SOURCES  = $(libreiser4_sources)
