--- a/configure.in
+++ b/configure.in
@@ -241,7 +241,8 @@ else
 fi
 
 if test x$enable_alone = xyes; then
-    ALONE_CFLAGS="$ALONE_CFLAGS -DENABLE_ALONE -DENABLE_MONOLITHIC -O9 -fno-builtin"
+dnl    ALONE_CFLAGS="$ALONE_CFLAGS -DENABLE_ALONE -DENABLE_MONOLITHIC -O9 -fno-builtin"
+    ALONE_CFLAGS="$ALONE_CFLAGS -DENABLE_ALONE -DENABLE_MONOLITHIC -O0 -g -fno-builtin"
 fi
 
 CFLAGS="$CFLAGS -W -Wall -Wno-unused"
