--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,6 @@ AH_TEMPLATE([VERSION], [Define to the version of the package.])
 AH_TEMPLATE([LIBREISER4_MAX_INTERFACE_VERSION], [])
 AH_TEMPLATE([LIBREISER4_MIN_INTERFACE_VERSION], [])
 AH_TEMPLATE([loff_t], [])
-dnl AH_TEMPLATE([ENABLE_ALONE], [])
 AH_TEMPLATE([ENABLE_MONOLITHIC], [])
 AH_TEMPLATE([ENABLE_DEBUG], [])
 AH_TEMPLATE([HAVE_LIBUUID], [])
@@ -113,9 +112,6 @@ AC_ARG_ENABLE(alone,
     [  --enable-alone          build in alone library [default=no]], ,
         enable_alone=no
 )
-if test x$enable_alone = xyes; then
-    enable_debug=no;
-fi
 
 AC_ARG_ENABLE(monolithic,
     [  --enable-monolithic     build in monolithic maner (with builtin plugins) [default=yes]], ,
@@ -234,15 +230,16 @@ if test x$enable_monolithic = xno; then
 fi
 AC_SUBST(LIBREISER4_LIBS)
 
-if test x$enable_debug = xyes; then
-    GENERIC_CFLAGS="$CFLAGS -O0 -g"
-else
-    GENERIC_CFLAGS="$CFLAGS -O2"
+if test x$enable_alone = xyes; then
+    ALONE_CFLAGS="$ALONE_CFLAGS -DENABLE_ALONE -DENABLE_MONOLITHIC -fno-builtin"
 fi
 
-if test x$enable_alone = xyes; then
-dnl    ALONE_CFLAGS="$ALONE_CFLAGS -DENABLE_ALONE -DENABLE_MONOLITHIC -O9 -fno-builtin"
-    ALONE_CFLAGS="$ALONE_CFLAGS -DENABLE_ALONE -DENABLE_MONOLITHIC -O0 -g -fno-builtin"
+if test x$enable_debug = xyes; then
+    GENERIC_CFLAGS="$GENERIC_CFLAGS -O0 -g"
+    ALONE_CFLAGS="$ALONE_CFLAGS -O0 -g"
+else
+    GENERIC_CFLAGS="$GENERIC_CFLAGS -O2"
+    ALONE_CFLAGS="$ALONE_CFLAGS -O9"
 fi
 
 CFLAGS="$CFLAGS -W -Wall -Wno-unused"
@@ -267,11 +264,6 @@ AC_SUBST(PLUGIN_LDFLAGS)
 AC_SUBST(PROGS_LDFLAGS)
 
 AM_CONDITIONAL(ENABLE_ALONE, test x$enable_alone = xyes)
-
-dnl if test x$enable_alone = xyes; then
-dnl     AC_DEFINE(ENABLE_ALONE)
-dnl fi
-
 AM_CONDITIONAL(ENABLE_DEBUG, test x$enable_debug = xyes)
 
 if test x$enable_debug = xyes; then
