--- a/progs/debugfs/Makefile.am
+++ b/progs/debugfs/Makefile.am
@@ -6,6 +6,7 @@ debugfs_reiser4_LDADD 	 = $(top_builddir)/libreiser4/libreiser4.la \
 			   $(top_builddir)/progs/libmisc/libmisc.la \
 			   $(UUID_LIBS) $(PROGS_LIBS)
 			  
-debugfs_reiser4_LDFLAGS  = $(PROGS_LDFLAGS)
+debugfs_reiser4_LDFLAGS  = @PROGS_LDFLAGS@
+debugfs_reiser4_CFLAGS   = @GENERIC_CFLAGS@
 
 INCLUDES		 = -I$(top_srcdir)/include -I$(top_srcdir)/progs/include
