--- a/progs/mkfs/Makefile.am
+++ b/progs/mkfs/Makefile.am
@@ -5,7 +5,8 @@ mkfs_reiser4_LDADD 	= $(top_builddir)/libreiser4/libreiser4.la \
 			  $(top_builddir)/progs/libmisc/libmisc.la \
 			  $(PROGS_LIBS) $(UUID_LIBS)
 			  
-mkfs_reiser4_LDFLAGS 	= $(PROGS_LDFLAGS)
+mkfs_reiser4_LDFLAGS 	= @PROGS_LDFLAGS@
+mkfs_reiser4_CFLAGS 	= @GENERIC_CFLAGS@
 
 INCLUDES		= -I$(top_srcdir)/include -I$(top_srcdir)/progs/include
 
