--- a/progs/fsck/Makefile.am
+++ b/progs/fsck/Makefile.am
@@ -6,8 +6,8 @@ fsck_reiser4_LDADD 	= $(top_builddir)/libreiser4/libreiser4.la \
 			  $(top_builddir)/progs/libmisc/libmisc.la \
 			  @PROGS_LIBS@
 
-
-fsck_reiser4_LDFLAGS 	= $(PROGS_LDFLAGS)
+fsck_reiser4_LDFLAGS    = @PROGS_LDFLAGS@
+fsck_reiser4_CFLAGS     = @GENERIC_CFLAGS@
 
 INCLUDES		= -I$(top_srcdir)/include -I$(top_srcdir)/progs/include
 
