--- a/configure.in
+++ b/configure.in
@@ -6,13 +6,14 @@ AC_PREREQ(2.50)
 AH_TEMPLATE([PACKAGE], [Define this to be the name of the package.])
 AH_TEMPLATE([VERSION], [Define to the version of the package.])
 
-AH_TEMPLATE([LIBREISER4_MAX_INTERFACE_VERSION], [])
-AH_TEMPLATE([LIBREISER4_MIN_INTERFACE_VERSION], [])
-AH_TEMPLATE([loff_t], [])
-AH_TEMPLATE([ENABLE_MONOLITHIC], [])
-AH_TEMPLATE([ENABLE_DEBUG], [])
-AH_TEMPLATE([HAVE_LIBUUID], [])
-AH_TEMPLATE([HAVE_LIBREADLINE], [])
+AH_TEMPLATE([LIBREISER4_MAX_INTERFACE_VERSION], [Define to the max interface version.])
+AH_TEMPLATE([LIBREISER4_MIN_INTERFACE_VERSION], [Define to the min interface version.])
+AH_TEMPLATE([loff_t], [Define to loff_t])
+AH_TEMPLATE([ENABLE_MONOLITHIC], [Define for enable monolotic build.])
+AH_TEMPLATE([ENABLE_MANAGER], [Define for enable simple memory manager in libaal.])
+AH_TEMPLATE([ENABLE_DEBUG], [Define for enable debug info.])
+AH_TEMPLATE([HAVE_LIBUUID], [Define for enable libuuid using.])
+AH_TEMPLATE([HAVE_LIBREADLINE], [Define for enable libreadline using.])
 
 LIBREISER4_MAJOR_VERSION=0
 LIBREISER4_MINOR_VERSION=3
@@ -109,13 +110,18 @@ AC_SUBST(PROGS_LIBS)
 AM_ENABLE_SHARED
 
 AC_ARG_ENABLE(alone,
-    [  --enable-alone          build in alone library [default=no]], ,
+    [  --enable-alone          build alone library [default=no]], ,
         enable_alone=no
 )
 
 AC_ARG_ENABLE(monolithic,
     [  --enable-monolithic     build in monolithic maner (with builtin plugins) [default=yes]], ,
         enable_monolithic=yes
+)
+
+AC_ARG_ENABLE(manager,
+    [  --enable-manager        enable simple memory manager in libaal [default=no]], ,
+        enable_manager=no
 )
 
 AC_ARG_ENABLE(Werror,
@@ -253,6 +259,10 @@ AM_CONDITIONAL(ENABLE_MONOLITHIC, test x$enable_monolithic = xyes)
 
 if test x$enable_monolithic = xyes; then
     AC_DEFINE(ENABLE_MONOLITHIC)
+fi
+
+if test x$enable_manager = xyes; then
+    AC_DEFINE(ENABLE_MANAGER)
 fi
 
 PLUGIN_LDFLAGS=""
