Changes related to plugin factory.
(Logical change 1.3062)

--- a/libreiser4/Makefile.am
+++ b/libreiser4/Makefile.am
@@ -13,22 +13,26 @@ endif
 lib_LTLIBRARIES		     = libreiser4.la $(ALONE_LIBS)
 noinst_LTLIBRARIES	     = libreiser4-static.la
 
-libreiser4_la_LDFLAGS	     = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) \
-			       -release $(LT_RELEASE)
-
 if ENABLE_MONOLITHIC
 
 libreiser4_la_LIBADD	     = $(top_builddir)/libaal/libaal.la \
 			       $(top_builddir)/libaux/libaux-static.la \
 			       $(top_builddir)/plugin/libreiser4-plugin.la
+libreiser4_ldflags           = -Wl,-T -Wl,libreiser4.lds
+
 else
 
 libreiser4_la_LIBADD	     = $(top_builddir)/libaal/libaal.la \
 			       $(top_builddir)/libaux/libaux-static.la \
 			       @LIBREISER4_LIBS@
+libreiser4_ldflags           = 
+
 endif
 
 libreiser4_la_SOURCES	     = $(libreiser4_sources)
+
+libreiser4_la_LDFLAGS	     = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) \
+			       -release $(LT_RELEASE) $(libreiser4_ldflags)
 libreiser4_la_CFLAGS         = @GENERIC_CFLAGS@
 
 libreiser4_static_la_LIBADD  = $(top_builddir)/libaal/libaal-static.la \
@@ -47,7 +51,7 @@ libreiser4_alone_la_LIBADD   = $(top_builddir)/libaal/libaal-alone.la \
 libreiser4_alone_la_SOURCES  = $(libreiser4_sources)
 
 libreiser4_alone_la_CFLAGS   = @ALONE_CFLAGS@
-
+libreiser4_alone_la_LDFLAGS  = -Wl,-T -Wl,libreiser4.lds
 endif
 
 INCLUDES = $(includedir)
