A lot of changes related to alone mode and to make libreiser4 smaller in size for alone mode. Added some configure options like --enable-kcw, that is, enable key collisions workaround.
(Logical change 1.3063)

--- a/config.h.in
+++ b/config.h.in
@@ -3,6 +3,9 @@
 /* Define for enable debug info. */
 #undef ENABLE_DEBUG
 
+/* Define for enable key collision workaround code. */
+#undef ENABLE_KCW
+
 /* Define for enable simple memory manager in libaal. */
 #undef ENABLE_MANAGER
 
