A lot of changes related to alone mode and to make libreiser4 smaller in size for alone mode. Added options for control building different hash plugins.
(Logical change 1.3064)

--- a/config.h.in
+++ b/config.h.in
@@ -12,6 +12,9 @@
 /* Define for enable monolotic build. */
 #undef ENABLE_MONOLITHIC
 
+/* Define for enable plugins check code. */
+#undef ENABLE_PLUGINS_CHECK
+
 /* Define if you have the <dirent.h> header file, and it defines `DIR'. */
 #undef HAVE_DIRENT_H
 
