--- a/configure.in
+++ b/configure.in
@@ -132,8 +132,8 @@ AC_ARG_ENABLE(kcw,
 )
 
 AC_ARG_ENABLE(plugins_check,
-    [  --enable-plugins_check  enable plugins check in plugin initialization time [default=yes]], ,
-        enable_plugins-check=yes
+    [  --enable-plugins-check  enable plugins check in plugin initialization time [default=yes]], ,
+        enable_plugins_check=yes
 )
 
 AC_ARG_ENABLE(r5_hash,
