--- a/configure.in
+++ b/configure.in
@@ -47,11 +47,6 @@ AM_CONFIG_HEADER(config.h)
 AC_DEFINE_UNQUOTED(LIBREISER4_MAX_INTERFACE_VERSION, $LIBREISER4_BINARY_AGE)
 AC_DEFINE_UNQUOTED(LIBREISER4_MIN_INTERFACE_VERSION, $LIBREISER4_INTERFACE_AGE)
 
-AC_ARG_ENABLE(debug, 
-    [  --enable-debug          compile in assertions [default=yes]], , 
-	enable_debug=yes
-)
-
 AC_ARG_WITH(uuid,
     [  --with-uuid             support uuid generating and checking], ,
         with_uuid=yes
@@ -111,58 +106,63 @@ AC_SUBST(PROGS_LIBS)
 
 AM_ENABLE_SHARED
 
+AC_ARG_ENABLE(debug, 
+    [  --disable-debug                disable debug information in binaries [default=on]], , 
+	enable_debug=yes
+)
+
 AC_ARG_ENABLE(stand_alone,
-    [  --enable-stand-alone          build stand alone library [default=no]], ,
+    [  --enable-stand-alone           enable build stand alone library [default=off]], ,
         enable_stand_alone=no
 )
 
 AC_ARG_ENABLE(monolithic,
-    [  --enable-monolithic           build in monolithic build (with built-in plugins) [default=yes]], ,
+    [  --disable-monolithic           disable including all plugins in [default=on]], ,
         enable_monolithic=yes
 )
 
 AC_ARG_ENABLE(memory_manager,
-    [  --enable-memory-manager       enable simple memory manager in libaal [default=no]], ,
+    [  --enable-memory-manager        enable memory manager in libaal [default=off]], ,
         enable_memory_manager=no
 )
 
 AC_ARG_ENABLE(collisions_handling,
-    [  --enable-collisions-handling  enable key collision workaround in directory plugin [default=yes]], ,
+    [  --disable-collisions-handling  disable key collision handling [default=on]], ,
         enable_collisions_handling=yes
 )
 
 AC_ARG_ENABLE(plugins_check,
-    [  --enable-plugins-check        enable plugins check in plugin initialization time [default=yes]], ,
+    [  --disable-plugins-check        disable plugins check in plugin factory [default=on]], ,
         enable_plugins_check=yes
 )
 
 AC_ARG_ENABLE(r5_hash,
-    [  --enable-r5-hash              enable r5 hash support [default=yes]], ,
+    [  --disable-r5-hash              disable r5 hash plugin [default=on]], ,
         enable_r5_hash=yes
 )
 
 AC_ARG_ENABLE(fnv1_hash,
-    [  --enable-fnv1-hash            enable fnv1 hash support [default=yes]], ,
+    [  --disable-fnv1-hash            disable fnv1 hash plugin [default=on]], ,
         enable_fnv1_hash=yes
 )
 
 AC_ARG_ENABLE(rupasov_hash,
-    [  --enable-rupasov-hash         enable rupasov hash support [default=yes]], ,
+    [  --disable-rupasov-hash         disable rupasov hash plugin [default=on]], ,
         enable_rupasov_hash=yes
 )
 
 AC_ARG_ENABLE(tea_hash,
-    [  --enable-tea-hash             enable tea hash support [default=yes]], ,
+    [  --disable-tea-hash             disable tea hash plugin [default=on]], ,
         enable_tea_hash=yes
 )
 
 AC_ARG_ENABLE(Werror,
-    [  --enable-Werror               build with gcc -Werror [default=yes]], ,
+    [  --disable-Werror               disable build with gcc -Werror [default=on]], ,
 	enable_Werror=yes
 )
 
 AC_ARG_WITH(plugin-dir, 
-    [  --with-plugin-dir=PATH        directory plugins will lie in]
+    [  --with-plugin-dir=PATH         directory stand alone plugins will lie in]
 )
 if test x$with_plugin_dir = x; then
     with_plugin_dir="$libdir/reiser4"
