Fixes and improvements in plugin initializing code. By now this is contolable process, becauseit is started at users command
(Logical change 1.3119)

--- a/libreiser4/Makefile.am
+++ b/libreiser4/Makefile.am
@@ -47,7 +47,8 @@ libreiser4_alone_la_LIBADD   = $(top_builddir)/libaal/libaal-alone.la \
 libreiser4_alone_la_SOURCES  = $(libreiser4_sources)
 
 libreiser4_alone_la_CFLAGS   = @ALONE_CFLAGS@
-libreiser4_alone_la_LDFLAGS  =
+libreiser4_alone_la_LDFLAGS  = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) \
+			       -release $(LT_RELEASE)
 endif
 
 INCLUDES                     = $(includedir)
