--- a/progs/debugfs/Makefile.am
+++ b/progs/debugfs/Makefile.am
@@ -1,6 +1,6 @@
 sbin_PROGRAMS 		 = debugfs.reiser4
-debugfs_reiser4_SOURCES	 = debugfs.c debugfs.h print.c print.h measure.c \
-			   measure.h browse.c browse.h types.h
+debugfs_reiser4_SOURCES	 = debugfs.c debugfs.h print.c print.h browse.c \
+			   browse.h types.h
 
 debugfs_reiser4_LDADD 	 = $(top_builddir)/libreiser4/libreiser4.la \
 			   $(top_builddir)/progs/libmisc/libmisc.la \
