Libaal moved into separated package. Related changes and fixes
(Logical change 1.3153)

--- a/plugin/alloc/alloc40/Makefile.am
+++ b/plugin/alloc/alloc40/Makefile.am
@@ -11,7 +11,7 @@ liballoc40_static_la_CFLAGS  = @GENERIC_CFLAGS@
 else
 STATIC_LIBS                  =
 lib_LTLIBRARIES		     = liballoc40.la
-liballoc40_la_LIBADD	     = $(top_builddir)/libaal/libaal.la \
+liballoc40_la_LIBADD	     = @AAL_LIBS@ \
 			       $(top_builddir)/libaux/libaux-static.la
 
 liballoc40_la_SOURCES	     = $(alloc40_sources)
