--- a/plugin/format/format40/Makefile.am
+++ b/plugin/format/format40/Makefile.am
@@ -11,7 +11,7 @@ libformat40_static_la_CFLAGS	= @GENERIC_CFLAGS@
 else
 STATIC_LIBS                     = 
 lib_LTLIBRARIES			= libformat40.la
-libformat40_la_LIBADD		= $(top_builddir)/libaal/libaal.la \
+libformat40_la_LIBADD		= @AAL_LIBS@ \
 				  $(top_builddir)/libaux/libaux-static.la
 
 libformat40_la_SOURCES		= $(format40_sources)
