--- a/plugin/item/extent40/Makefile.am
+++ b/plugin/item/extent40/Makefile.am
@@ -11,7 +11,7 @@ libextent40_static_la_CFLAGS  = @GENERIC_CFLAGS@
 else
 STATIC_LIBS                   = 
 lib_LTLIBRARIES		      = libextent40.la
-libextent40_la_LIBADD	      = $(top_builddir)/libaal/libaal.la \
+libextent40_la_LIBADD	      = @AAL_LIBS@ \
 			        $(top_builddir)/libaux/libaux-static.la
 
 libextent40_la_SOURCES	      = $(extent40_sources)
