--- a/plugin/journal/journal40/Makefile.am
+++ b/plugin/journal/journal40/Makefile.am
@@ -11,7 +11,7 @@ libjournal40_static_la_CFLAGS	= @GENERIC_CFLAGS@
 else
 STATIC_LIBS                     =
 lib_LTLIBRARIES			= libjournal40.la
-libjournal40_la_LIBADD		= $(top_builddir)/libaal/libaal.la \
+libjournal40_la_LIBADD		= @AAL_LIBS@ \
 				  $(top_builddir)/libaux/libaux-static.la
 
 libjournal40_la_SOURCES		= $(journal40_sources)
