--- a/plugin/object/sym40/Makefile.am
+++ b/plugin/object/sym40/Makefile.am
@@ -11,7 +11,7 @@ libsym40_static_la_CFLAGS   = @GENERIC_CFLAGS@
 else
 STATIC_LIBS                 =
 lib_LTLIBRARIES		    = libsym40.la
-libsym40_la_LIBADD	    = $(top_builddir)/libaal/libaal.la \
+libsym40_la_LIBADD	    = @AAL_LIBS@ \
 			      $(top_builddir)/plugin/object/obj40/libobj40-static.la
 libsym40_la_SOURCES	    = $(sym40_sources)
 libsym40_la_LDFLAGS	    = @PLUGIN_LDFLAGS@
