--- a/plugin/sdext/sdext_symlink/Makefile.am
+++ b/plugin/sdext/sdext_symlink/Makefile.am
@@ -11,7 +11,7 @@ libsdext_symlink_static_la_CFLAGS  = @GENERIC_CFLAGS@
 else
 STATIC_LIBS                        =
 lib_LTLIBRARIES			   = libsdext_symlink.la
-libsdext_symlink_la_LIBADD	   = $(top_builddir)/libaal/libaal.la \
+libsdext_symlink_la_LIBADD	   = @AAL_LIBS@ \
 				     $(top_builddir)/libaux/libaux-static.la
 libsdext_symlink_la_SOURCES	   = $(sdext_symlink_sources)
 libsdext_symlink_la_LDFLAGS	   = @PLUGIN_LDFLAGS@
