--- a/configure.in
+++ b/configure.in
@@ -8,10 +8,8 @@ AH_TEMPLATE([VERSION], [Define to the version of the package.])
 
 AH_TEMPLATE([LIBREISER4_MAX_INTERFACE_VERSION], [Define to the max interface version.])
 AH_TEMPLATE([LIBREISER4_MIN_INTERFACE_VERSION], [Define to the min interface version.])
-AH_TEMPLATE([loff_t], [Define to loff_t])
 AH_TEMPLATE([ENABLE_DEBUG], [Define for enable debug info.])
 AH_TEMPLATE([ENABLE_MONOLITHIC], [Define for enable monolotic build.])
-AH_TEMPLATE([ENABLE_MEMORY_MANAGER], [Define for enable simple memory manager in libaal.])
 AH_TEMPLATE([ENABLE_COLLISIONS_HANDLING], [Define for enable key collision workaround code.])
 AH_TEMPLATE([ENABLE_PLUGINS_CHECK], [Define for enable plugins check code.])
 AH_TEMPLATE([ENABLE_SYMLINKS_SUPPORT], [Define for enable symlinks.])
@@ -107,6 +105,11 @@ AC_SUBST(PROGS_LIBS)
 
 AM_ENABLE_SHARED
 
+AC_ARG_ENABLE(Werror,
+    [  --disable-Werror               disable build with gcc -Werror [default=on]], ,
+	enable_Werror=yes
+)
+
 AC_ARG_ENABLE(debug, 
     [  --disable-debug                disable debug information in binaries [default=on]], , 
 	enable_debug=yes
@@ -120,11 +123,6 @@ AC_ARG_ENABLE(stand_alone,
 AC_ARG_ENABLE(monolithic,
     [  --disable-monolithic           disable including all plugins in [default=on]], ,
         enable_monolithic=yes
-)
-
-AC_ARG_ENABLE(memory_manager,
-    [  --enable-memory-manager        enable memory manager in libaal [default=off]], ,
-        enable_memory_manager=no
 )
 
 AC_ARG_ENABLE(collisions_handling,
@@ -162,11 +160,6 @@ AC_ARG_ENABLE(tea_hash,
         enable_tea_hash=yes
 )
 
-AC_ARG_ENABLE(Werror,
-    [  --disable-Werror               disable build with gcc -Werror [default=on]], ,
-	enable_Werror=yes
-)
-
 AC_ARG_WITH(plugin-dir, 
     [  --with-plugin-dir=PATH         directory stand alone plugins will lie in]
 )
@@ -191,23 +184,8 @@ ALONE_CFLAGS=""
 GENERIC_CFLAGS=""
 
 dnl make libc threadsafe (not required for us for awhile, but useful other users of
-dnl ibreiser4)
+dnl libreiser4)
 GENERIC_CFLAGS="$GENERIC_CFLAGS -D_REENTRANT"
-
-AC_SYS_LARGEFILE
-
-if test -z "${ac_cv_sys_file_offset_bits}"; then
-	AC_MSG_WARN(
-Can't detect right _FILE_OFFSET_BITS. Will be forced to 64bit.)
-	ac_cv_sys_file_offset_bits=64
-fi
-
-GENERIC_CFLAGS="$GENERIC_CFLAGS -D_FILE_OFFSET_BITS=${ac_cv_sys_file_offset_bits}"
-AC_CHECK_SIZEOF(off_t, 64, [
-	#include <stdio.h>
-	#include <sys/types.h>
-	#include <unistd.h>
-])
 
 AM_PROG_LIBTOOL
 
@@ -257,7 +235,6 @@ AC_FUNC_STAT
 AC_CHECK_FUNCS([register_printf_function statfs getmntent hasmntopt memset strerror strtol time])
 
 dnl Check for libdl, if we are doing dynamic loading
-LIBREISER4_LIBS=""
 if test x$enable_monolithic = xno; then
     OLD_LIBS="$LIBS"
     LIBS=""
@@ -265,13 +242,37 @@ if test x$enable_monolithic = xno; then
 	AC_MSG_ERROR(libdl not found!)
 	exit
     )
-    LIBREISER4_LIBS="$LIBREISER4_LIBS $LIBS"
+    LIBREISER4_LIBS="$LIBS"
     LIBS="$OLD_LIBS"
 fi
 AC_SUBST(LIBREISER4_LIBS)
 
+dnl Checking for libaal
+OLD_LIBS="$LIBS"
+LIBS=""
+AC_CHECK_LIB(aal, aal_device_open, ,
+    AC_MSG_ERROR(libaal not found!)
+    exit
+)
+AAL_LIBS="$LIBS"
+LIBS="$OLD_LIBS"
+
+AC_SUBST(AAL_LIBS)
+
 if test x$enable_stand_alone = xyes; then
-    ALONE_CFLAGS="$ALONE_CFLAGS -Wl,-N -DENABLE_STAND_ALONE -DENABLE_MONOLITHIC -fno-builtin -malign-jumps=1 -malign-loops=1 -malign-functions=1"
+    OLD_LIBS="$LIBS"
+    LIBS=""
+    AC_CHECK_LIB(aal-alone, aal_device_open, ,
+        AC_MSG_ERROR(libaal-alone not found!)
+        exit
+    )
+    AAL_ALONE_LIBS="$LIBS"
+    LIBS="$OLD_LIBS"
+
+    AC_SUBST(AAL_ALONE_LIBS)
+
+    ALONE_CFLAGS="$ALONE_CFLAGS -Wl,-N -DENABLE_STAND_ALONE -DENABLE_MONOLITHIC \
+-fno-builtin -malign-jumps=1 -malign-loops=1 -malign-functions=1"
 fi
 
 if test x$enable_debug = xyes; then
@@ -293,10 +294,6 @@ AM_CONDITIONAL(ENABLE_MONOLITHIC, test x$enable_monolithic = xyes)
 
 if test x$enable_monolithic = xyes; then
     AC_DEFINE(ENABLE_MONOLITHIC)
-fi
-
-if test x$enable_memory_manager = xyes; then
-    AC_DEFINE(ENABLE_MEMORY_MANAGER)
 fi
 
 if test x$enable_collisions_handling = xyes; then
@@ -323,10 +320,8 @@ if test x$enable_monolithic = xno; then
 fi
 AC_SUBST(PLUGIN_LDFLAGS)
 
-AC_SUBST(PROGS_LDFLAGS)
-
-AM_CONDITIONAL(ENABLE_DEBUG, test x$enable_debug = xyes)
 AM_CONDITIONAL(ENABLE_STAND_ALONE, test x$enable_stand_alone = xyes)
+AM_CONDITIONAL(ENABLE_DEBUG, test x$enable_debug = xyes)
 
 if test x$enable_debug = xyes; then
     AC_DEFINE(ENABLE_DEBUG)
@@ -338,11 +333,9 @@ AC_SUBST(GENERIC_CFLAGS)
 AC_OUTPUT([
     Makefile
     include/Makefile
-    include/aal/Makefile
     include/aux/Makefile
     include/reiser4/Makefile
     include/repair/Makefile
-    libaal/Makefile
     libaux/Makefile
     libreiser4/Makefile
     librepair/Makefile
