--- a/plugin/item/nodeptr40/Makefile.am
+++ b/plugin/item/nodeptr40/Makefile.am
@@ -11,7 +11,7 @@ libnodeptr40_static_la_CFLAGS	= @GENERIC_CFLAGS@
 else
 STATIC_LIBS                     = 
 lib_LTLIBRARIES			= libnodeptr40.la
-libnodeptr40_la_LIBADD		= $(top_builddir)/libaal/libaal.la \
+libnodeptr40_la_LIBADD		= @AAL_LIBS@ \
 				  $(top_builddir)/libaux/libaux-static.la
 
 libnodeptr40_la_SOURCES		= $(nodeptr40_sources)
