--- a/plugin/object/dir40/Makefile.am
+++ b/plugin/object/dir40/Makefile.am
@@ -11,7 +11,7 @@ libdir40_static_la_CFLAGS   = @GENERIC_CFLAGS@
 else
 STATIC_LIBS                 =
 lib_LTLIBRARIES		    = libdir40.la
-libdir40_la_LIBADD	    = $(top_builddir)/libaal/libaal.la \
+libdir40_la_LIBADD	    = @AAL_LIBS@ \
 			      $(top_builddir)/plugin/object/obj40/libobj40-static.la
 libdir40_la_SOURCES	    = $(dir40_sources)
 libdir40_la_LDFLAGS	    = @PLUGIN_LDFLAGS@
