--- a/plugin/sdext/sdext_lw/Makefile.am
+++ b/plugin/sdext/sdext_lw/Makefile.am
@@ -11,7 +11,7 @@ libsdext_lw_static_la_CFLAGS 	= @GENERIC_CFLAGS@
 else
 STATIC_LIBS                     =
 lib_LTLIBRARIES			= libsdext_lw.la
-libsdext_lw_la_LIBADD		= $(top_builddir)/libaal/libaal.la \
+libsdext_lw_la_LIBADD		= @AAL_LIBS@ \
 				  $(top_builddir)/libaux/libaux-static.la
 libsdext_lw_la_SOURCES		= $(sdext_lw_sources)
 libsdext_lw_la_LDFLAGS		= @PLUGIN_LDFLAGS@
