--- a/progs/libmisc/Makefile.am
+++ b/progs/libmisc/Makefile.am
@@ -1,9 +1,10 @@
 noinst_LTLIBRARIES	= libmisc.la
+
 libmisc_la_SOURCES	= misc.c profile.c exception.c gauge.c ui.c \
 			  mpressure.c
 
 libmisc_la_LIBADD 	= $(top_builddir)/libaux/libaux-static.la \
-			  $(top_builddir)/libaal/libaal.la $(PROGS_LIBS)
+			  @AAL_LIBS@ @PROGS_LIBS@
 
 libmisc_la_CFLAGS       = @GENERIC_CFLAGS@
 
